Input Dialog Updated

--- a/OOP-FinalProject/src/oop/finalproject/Form1.form
+++ b/OOP-FinalProject/src/oop/finalproject/Form1.form
@@ -256,6 +256,9 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Remove Car"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton4ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="jButton5">
                       <Properties>
@@ -490,16 +493,25 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Add Car Owner"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton14ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="jButton15">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Update Car Owner"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton15ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="jButton16">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Remove Car Owner"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton16ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
