--- a/OOP-FinalProject/src/oop/finalproject/Form1.form
+++ b/OOP-FinalProject/src/oop/finalproject/Form1.form
@@ -385,11 +385,17 @@
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Update Customer"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton12ActionPerformed"/>
+                      </Events>
                     </Component>
                     <Component class="javax.swing.JButton" name="jButton13">
                       <Properties>
                         <Property name="text" type="java.lang.String" value="Delete Customer"/>
                       </Properties>
+                      <Events>
+                        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jButton13ActionPerformed"/>
+                      </Events>
                     </Component>
                   </SubComponents>
                 </Container>
